# setenv

./: Cargo.toml  README.md  setenv.sln
bindings/: build.rs  lib.rs
lib/: setenv.c  setenv.h  setenv_remote_thread.c  setenv_remote_thread.h  setenv_remote_thread_opcodes.c  setenv_remote_thread_opcodes.txt
tools/: opcodes_to_c.rs
vs-build/: setenv.filters  setenv.vcxproj
