[package]
name = "setenv"
version = "0.1.0"
edition = "2021"
build = "bindings/build.rs"

[lib]
path = "bindings/lib.rs"

[[bin]]
name = "opcodes_to_c"
path = "tools/opcodes_to_c.rs"

[dependencies]
windows-sys = { version = "0.48.0", features = [
    "Win32_System_LibraryLoader",
    "Win32_Foundation",
] }

[features]
build-dll = []
